[package]
name = "ei"
version = "0.1.2"
authors = ["tomaon <tomaon@outlook.jp>"]

description = "erl_interface for rust"
repository = "https://github.com/tomaon/ei"
keywords = ["erlang", "erl_interface", "cnode", "port"]
license = "Apache-2.0"

[dependencies]
rust-crypto = "^0.2"
rustc-serialize = "^0.3"
