[package]
name = "ei"
version = "0.2.0"
authors = ["tomaon <tomaon@outlook.jp>"]
edition = "2018"

description = "erl_interface for rust"
repository = "https://github.com/tomaon/ei"
keywords = ["erlang", "erl_interface", "port", "serde"]
license = "Apache-2.0"

[dependencies]
byteorder = { version = "1" }
serde = { version = "1", features = ["derive"] }
